src/objects/Shipment__c.object
<CustomObject>
    <description>A Shipment contains the shipping account information and products and services included in a single shipment from a quote.</description>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountShipmentCharges__c</fullName>
        <label>Count Shipment Charges</label>
        <summaryForeignKey>Shipment_Charge__c.Shipment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Shipment_Charges__c</fullName>
        <description>Number of shipment charges.</description>
        <inlineHelpText>Number of shipment charges.</inlineHelpText>
        <label>Count Shipment Charges</label>
        <summaryForeignKey>Shipment_Charge__c.Shipment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Shipment_Charges__c</fullName>
        <label>Recurring Monthly Expense</label>
        <summarizedField>Shipment_Charge__c.Recurring_Monthly_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Shipment_Charge__c.ChargeType__c</field>
            <operation>equals</operation>
            <value>Recurring</value>
        </summaryFilterItems>
        <summaryForeignKey>Shipment_Charge__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Hardware_Items__c</fullName>
        <label>Number of Hardware Items</label>
        <summarizedField>Shipment_Charge__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Shipment_Charge__c.Is_Hardware_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Shipment_Charge__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Service_Items__c</fullName>
        <label>Number of Service Items</label>
        <summarizedField>Shipment_Charge__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Shipment_Charge__c.Is_Services_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Shipment_Charge__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_Time_Expense_Shipment_Charges__c</fullName>
        <label>Applicable One-Time Expense</label>
        <summarizedField>Shipment_Charge__c.One_Time_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Shipment_Charge__c.ChargeType__c</field>
            <operation>notEqual</operation>
            <value>Recurring</value>
        </summaryFilterItems>
        <summaryForeignKey>Shipment_Charge__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <description>The quote that this shipment is created for.</description>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recurring_Charge_Count__c</fullName>
        <label>Recurring Charge Count</label>
        <summaryFilterItems>
            <field>Shipment_Charge__c.ChargeType__c</field>
            <operation>equals</operation>
            <value>Recurring</value>
        </summaryFilterItems>
        <summaryForeignKey>Shipment_Charge__c.Shipment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ServiceTerm__c</fullName>
        <label>Service Term</label>
        <summarizedField>Shipment_Charge__c.ServiceTerm__c</summarizedField>
        <summaryForeignKey>Shipment_Charge__c.Shipment__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipment_Charge_Cost__c</fullName>
        <label>Shipping &amp; Handling</label>
        <summarizedField>Shipment_Charge__c.Shipment_Cost__c</summarizedField>
        <summaryForeignKey>Shipment_Charge__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ShippingCarrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingService__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Handling_Cost__c</fullName>
        <label>Shipping Handling Cost</label>
        <summarizedField>Shipment_Charge_Group__c.Shipment_Cost__c</summarizedField>
        <summaryForeignKey>Shipment_Charge_Group__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC </fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_Min_Price_Checks__c</fullName>
        <description>Number of shipment charges where the effective price is greater than or equal to the minimum sales price.</description>
        <inlineHelpText>Number of shipment charges where the effective price is greater than or equal to the minimum sales price.</inlineHelpText>
        <label>Sum Min Price Checks</label>
        <summarizedField>Shipment_Charge__c.Min_Price_Check__c</summarizedField>
        <summaryForeignKey>Shipment_Charge__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_Certificate_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax Certificate Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_Address__c</fullName>
        <label>Tax Exempt Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select Tax Status</fullName>
                    <default>true</default>
                    <label>Select Tax Status</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Shipment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>